# LumiSol

./: .gitignore  README.md
backend/: README.md  lumisol.py  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: solar.py
backend/app/core/: config.py
backend/app/services/: lot_manager.py  solar_engine.py
backend/scripts/: check_alignment.py  check_gpkg_crs.py  debug_visualizer.py  find_lot.py  generate_mask2former_data.py  geojson_to_gpkg.py  inspect_gpkg.py  pick_coords.py  test_affine.py  test_generation_local.py  test_pmtiles.py  test_read_files.py  test_roof_mask.py  test_segmentation.py  test_single_pair.py  test_upscaling.py  train_mask2former.py
backend/scripts/pipeline/: config.py  data_generator.py  lidar_downloader.py  model_trainer.py  post_processor.py  vector_filter.py  visualizer.py
backend/services/: geo_engine.py  solar_engine.py  vector_service.py  weather_service.py
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx
client/src/components/: AddressAutocomplete.tsx  MicrosoftFootprints.tsx
client/src/hooks/: useRoofSegmenter.ts
old_backend/: README.md  lumisol.py  main.py  pyproject.toml
old_backend/scripts/pipeline/: data_generator.py  model_trainer.py  post_processor.py  vector_filter.py  visualizer.py
old_backend/services/: alignment_engine.py  geo_engine.py
