[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "fastapi>=0.122.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "mobile-sam",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "pyogrio>=0.12.1",
    "python-multipart>=0.0.20",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.233",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
mobile-sam = { git = "https://github.com/ChaoningZhang/MobileSAM.git" }
