[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
]
