[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.11.0.86",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "pytorch-lightning>=2.1.0",
    "evaluate>=0.4.1",
    "scikit-learn>=1.4.0",
]
